out/production/My Development Org/objects/bvd_connector__Bvd_Setup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setup where the SSO and Datasource data are stored</description>
    <fields>
        <fullName>bvd_connector__Batchjob_Settings_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batchjob Settings Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Datasource_Id__c</fullName>
        <label>Datasource Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Datasource_Label__c</fullName>
        <label>Datasource Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Datasource_Webservice_URL__c</fullName>
        <label>Datasource Webservice URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Datasource_Website_URL__c</fullName>
        <label>Datasource Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Field_Mapping_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Mapping Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Import_Settings_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import Settings Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Organization_Token__c</fullName>
        <externalId>true</externalId>
        <label>Organization Token</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bvd_connector__REST_URL__c</fullName>
        <label>REST URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bvd_connector__SSO_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSO Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <label>BvD Setup</label>
</CustomObject>